--- a/index.html
+++ b/index.html
@@ -1,94 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoGo</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-<a href="./index.html">MoGo</a><!--ЗАПАМ'ЯТАЙ - логотип на сайті це завжди посилання-->
-<nav>
-    <ul>
-        <li><a href="">ABOUT</a></li>
-        <li><a href="">SERVICE</a></li>
-        <li><a href="">WORK</a></li>
-        <li><a href="">BLOG</a></li>
-        <li><a href="">CONTACT</a></li>
-    </ul>
-</nav>
+      <a href="./index.html">MoGo</a
+      ><!--ЗАПАМ'ЯТАЙ - логотип на сайті це завжди посилання-->
+      <nav>
+        <ul>
+          <li><a href="">ABOUT</a></li>
+          <li><a href="">SERVICE</a></li>
+          <li><a href="">WORK</a></li>
+          <li><a href="">BLOG</a></li>
+          <li><a href="">CONTACT</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Photograf - California</h1>
-        <!--пізніше видалимо у css-->
-        <section>
-            <h3>We work with</h3>
-            <h2>Amazing Services</h2>
-            <ul>
-                <li>
-                    <img src="" alt="">
-                    <h4>Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <h4>Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <h4>Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <h4>photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <h4>Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <h4>Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3>Who we are</h3>
-            <h2>Meet our team</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-            <ul>
-                <li>
-                    <img src="./images/first-man.png" alt="">
-                    <h4>Matthew Dix</h4>
-                    <p>Graphic Design</p>
-                </li>
-                <li>
-                    <img src="./images/second-man.png" alt="">
-                    <h4>Christopher Campbell</h4>
-                    <p>Branding/UX design</p>
-                </li>
-                <li>
-                    <img src="./images/third-man.png" alt="">
-                    <h4>Michael Fertig </h4>
-                    <p>Developer</p>
-                </li>
-            </ul>
-        </section>
+      <h1>Photograf - California</h1>
+      <!--пізніше видалимо у css-->
+      <section>
+        <h3>We work with</h3>
+        <h2>Amazing Services</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h4>Photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h4>Photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h4>Photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h4>photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h4>Photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h4>Photography</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Who we are</h3>
+        <h2>Meet our team</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/first-man.png" alt="" />
+            <h4>Matthew Dix</h4>
+            <p>Graphic Design</p>
+          </li>
+          <li>
+            <img src="./images/second-man.png" alt="" />
+            <h4>Christopher Campbell</h4>
+            <p>Branding/UX design</p>
+          </li>
+          <li>
+            <img src="./images/third-man.png" alt="" />
+            <h4>Michael Fertig</h4>
+            <p>Developer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-    <p>
-        &#169;2016 MoGo free PSD template by <a href="">Laaqiq</a>
-    </p>
-    <input type="email" placeholder="Your Email...">
-    <button type="submit">Subscribe</button>
-    <p>hello</p>
+      <p>&#169;2016 MoGo free PSD template by <a href="">Laaqiq</a></p>
+      <input type="email" placeholder="Your Email..." />
+      <button type="submit">Subscribe</button>
+      <a href="./index2.html">hello</a>
     </footer>
-</body>
+  </body>
 </html>
